--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,149 @@
-.App {
+@import url('https://fonts.googleapis.com/css?family=Manjari:700&display=swap');
+
+html, body {
+  width: 100%;
+  height: 100%;
+  font-family: 'Manjari', sans-serif;
+}
+
+#root {
+  height: 100%;
+}
+
+.mt-2 {
+  margin-top: 20px;
+}
+
+.mt-1 {
+  margin-top: 10px;
+}
+
+.mr-2 {
+  margin-right: 20px;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+span {
+  padding-top: 8px;
+}
+
+header {
+  padding: 10px;
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header .logo {
+  font-size: 50px;
+}
+
+header .logo span {
+  border-bottom: 3px solid;
+  border-color: #FFB142;
+}
+
+header nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+header nav a {
+  text-decoration: none;
+  margin: 0 10px;
+}
+
+header nav a:last-child {
+  margin-right: 0;
+}
+
+header nav .github-button {
+  padding: 10px 20px;
+  border: 4px solid #FFB142;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  width: 80px;
+  justify-content: space-between;
+  color: #FFB142;
+}
+
+.description {
+  width: 100%;
+  font-size: 40px;
   text-align: center;
+  margin: 100px 0 50px 0;
 }
 
-.App-logo {
-  height: 40vmin;
+.description span {
+  color: #FFB142;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.downloads {
+  width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #09d3ac;
+.downloads a {
+  text-decoration: none;
+}
+
+.downloads .button {
+  width: 250px;
+  padding: 10px;
+  border: 4px solid #FFB142;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  color: #FFB142;
+}
+
+.separator {
+  position: relative;
+  width: 100%;
+  height: 200px;
+}
+
+.separator::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  clip-path: polygon(100% 0, 0 0, 0 100%);
+}
+
+.separator::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: #FFB142;
+  clip-path: polygon(100% 0, 0 100%, 100% 100%);
+}
+
+.separator.reverse {
+  transform: rotateY(180deg);
+}
+
+.container {
+  background: #FFB142;
+  width: 100%;
 }
